<resources>
    <string name="app_name">NotifyMe</string>

    <string name="navigation_new_package">Novo Pacote</string>
    <string name="navigation_package_out">Saída de Pacote</string>

    <string name="hint_name">Nome do destinatário</string>
    <string name="hint_trackingno">Número do pacote</string>
    <string name="hint_carrier">Nome do remetente</string>
    <string name="hint_shelf">Localização do pacote</string>
    <string name="hint_observations">Observações</string>
    <string name="hint_search_package">Digite um nome para buscar pacotes</string>

    <string name="special_handling">Cuidados Especiais</string>
    <string name="urgent">Urgente</string>
    <string name="fragile">Frágil</string>
    <string name="heavy">Pesado</string>
    <string name="perishable">Perecível</string>

    <string name="pictures">Fotos</string>
    <string name="add">Adicionar</string>

    <string name="packages_selected">Pacotes selecionados</string>
    <string name="packages_status">Status sobre a entrega</string>
    <string name="photo_evidences">Evidências</string>
    <string name="register_checkout">Registrar Entrega</string>
</resources>
